...
        let vc = MobileDataListViewController()
        vc.viewModel = viewModel
        return vc
    }
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Mobile Data Usage"
        
        setupTableView()
        bind(to: viewModel)
        viewModel.viewDidLoad()
    }
    
...
